-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.8.1
-
None
-
Archlinux with ffmpeg 7.1 and opus 1.5.2
-
-
54a756b84 (130-based), 45675fa01 (126-based), 24e9ff7ca (122-based)
Despite various fixes for QTBUG-130273 I still see (at least) two issues with codec handling:
MP3: While direct file playback works, playback via WebAudio fails with "Failed to execute 'decodeAudioData' on 'BaseAudioContext': Unable to decode audio data". This can be reproduced on https://mdn.github.io/webaudio-examples/decode-audio-data/promise/ where clicking "Play" logs that error and doesn't actually play anything. The same also happens when notification sounds (are supposed to) play on lichess.org.
Opus: Playback still seems to be broken despite the fix: https://tools.woolyss.com/html5-audio-video-tester/?u=woolyss.com/f/audio-sample.opus has the play button greyed out. The same also happens when trying to play WhatsApp Web voice messages (clicking the play button does nothing).
For Opus, chrome://media-internals shows:
"Warning, FFmpegDemuxer failed to create a valid/supported audio decoder configuration from muxed stream, config:codec: opus, profile: unknown, bytes_per_channel: 0, channel_layout: MONO, channels: 1, samples_per_second: 48000, sample_format: Unknown sample format, bytes_per_frame: 0, seek_preroll: 80000us, codec_delay: 104, has extra data: true, encryption scheme: Unencrypted, discard decoder delay: true, target_output_channel_layout: NONE, target_output_sample_format: Unknown sample format, has aac extra data: false"
"FFmpegDemuxer: skipping invalid or unsupported audio track"
"FFmpegDemuxer: no supported streams"
Passing --disable-features=FFmpegAllowLists fixes both of those issues.
- relates to
-
QTBUG-130273 DOMException when play()'ing audio tags with mp3 sources
-
- Closed
-