[fixup][ffmpeg] Fix building with system ffmpeg

Refactor workaround for codec selection issues.
Introduce FindDecoder which meant to replace avcodec_find_decoder.
Imporove codec detection in format context.

Fixes: QTBUG-132762
Task-number: QTBUG-130273
Pick-to: 126-based 122-based
Change-Id: I6d520633ebebbb9bdb7aa71b8247066c2a662be3
Reviewed-on: https://codereview.qt-project.org/c/qt/qtwebengine-chromium/+/617873
Reviewed-by: Moss Heim <moss.heim@qt.io>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>